# common-cpp

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml
cmake/: CommonCppConfig.cmake.in
inc/: CommonCpp.h  datafile.h  datasetCOXS2V.h  datasetChokePoint.h  eval.h  generic.h  imgUtils.h  logging.h  norm.h  testing.h  timing.h  types.h
src/: datafile.cpp  datasetCOXS2V.cpp  datasetChokePoint.cpp  eval.cpp  imgUtils.cpp  logging.cpp  norm.cpp  testing.cpp  timing.cpp
test/: CommonCppTest.cpp  CommonCppTest.h
